# libais

CVSROOT/: cvsignore  loginfo  syncmail
libaisutil/: .cvsignore  ChangeLog  Makefile.am  Makefile.bs  README  configure.ac
libaisutil/config/: .cvsignore  aclocal.m4
libaisutil/include/: .cvsignore  Makefile.am
libaisutil/include/aisutil/: .cvsignore  aisutilconf.h.in  config.h  peakcount.h  sha1.h  socket.h  string.h  time.h  utils.h  version.h
libaisutil/include/aisutil/config/: config.h  data.h  definitions.h  errors.h  handler.h  parser.h  seg-handler.h  var-handler.h
libaisutil/include/aisutil/config/handlers/: bool.h  integers.h
libaisutil/include/aisutil/socket/: domain-ip.h  domain-ipv4.h  domain-ipv6.h  domain-ipx.h  domain-unix.h  domain.h  ipv4-tcp.h  ipv6-tcp.h  ipx-spx.h  socket.h  sockets.h  stateful-type.h  type-seqpacket.h  type-stream.h  type.h  unix.h
libaisutil/include/aisutil/string/: mask.h  string.h  tokens.h
libaisutil/src/: sha1.cpp  time.cpp  utils.cpp  version.cpp
libaisutil/src/config/: config.cpp  data.cpp  handle-misc.cpp  parser.cpp
libaisutil/src/socket/: README  domain-ipv4.cpp  domain-ipv6.cpp  domain-ipx.cpp  domain-unix.cpp  ipv4-tcp.cpp  ipv6-tcp.cpp  ipx-spx.cpp  socket.cpp  stateful-type.cpp  type-seqpacket.cpp  type-stream.cpp  unix.cpp
libaisutil/src/string/: mask.cpp  string.cpp  tokens.cpp
libaisutil/test/: README  config.cpp  peakcount.cpp  sha1.cpp  string.cpp  stringmask.cpp  stringtokens.cpp  test.conf  tests.h  time.cpp  utils.cpp
www/: doxygen.conf  runjob
www/doxygen/: footer.html
www/doxygen/libaisutil/: doxygen.conf  groups.doxy  namespaces.doxy
www/htdocs/: index.html
