# $Id$
# Top make rules
#


# Include files..
nobase_include_HEADERS=\
	aisutil/config/handlers/bool.h \
	aisutil/config/handlers/integers.h \
	aisutil/config/config.h \
	aisutil/config/definitions.h \
	aisutil/config/errors.h \
	aisutil/config/handler.h \
	aisutil/config/seg-handler.h \
	aisutil/config/var-handler.h \
	aisutil/socket/domain-ip.h \
	aisutil/socket/domain-ipv4.h \
	aisutil/socket/domain-ipv6.h \
	aisutil/socket/domain-ipx.h \
	aisutil/socket/domain-unix.h \
	aisutil/socket/ipv4-tcp.h \
	aisutil/socket/ipv6-tcp.h \
	aisutil/socket/ipx-spx.h \
	aisutil/socket/socket.h \
	aisutil/socket/sockets.h \
	aisutil/socket/stateful-type.h \
	aisutil/socket/type-seqpacket.h \
	aisutil/socket/type-stream.h \
	aisutil/socket/unix.h \
	aisutil/string/mask.h \
	aisutil/string/string.h \
	aisutil/string/tokens.h \
	aisutil/aisutilconf.h \	
	aisutil/config.h \
	aisutil/peakcount.h \
	aisutil/sha1.h \
	aisutil/socket.h \
	aisutil/string.h \
	aisutil/time.h \
	aisutil/utils.h \
	aisutil/version.h


all:
